// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeListComponent should be rendered empty 1`] = `
<yttt-time-list
  displayedColumns={[Function Array]}
  timeList={[Function Array]}
>
  <div
    class="time-list"
  >
    <mat-card
      appearance="outlined"
      class="mat-mdc-card mdc-card mat-mdc-card-outlined mdc-card--outlined"
    >
      <mat-card-header
        class="mat-mdc-card-header"
      >
        <div
          class="mat-mdc-card-header-text"
        >
          <mat-card-title
            class="mat-mdc-card-title"
          >
            Track Time
          </mat-card-title>
          <mat-card-subtitle
            class="mat-mdc-card-subtitle"
          >
            New entry
          </mat-card-subtitle>
        </div>
      </mat-card-header>
      <mat-card-content
        class="mat-mdc-card-content"
      >
        <table
          class="mat-mdc-table mdc-data-table__table cdk-table mat-elevation-z8"
          mat-table=""
          role="table"
        >
          <thead
            role="rowgroup"
          >
            <tr
              class="mat-mdc-header-row mdc-data-table__header-row cdk-header-row"
              mat-header-row=""
              role="row"
            >
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-start mat-column-start"
                mat-header-cell=""
                role="columnheader"
              >
                 Start 
              </th>
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-end mat-column-end"
                mat-header-cell=""
                role="columnheader"
              >
                 End 
              </th>
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-ticket mat-column-ticket"
                mat-header-cell=""
                role="columnheader"
              >
                 Ticket 
              </th>
            </tr>
          </thead>
          <tbody
            class="mdc-data-table__content"
            role="rowgroup"
          >
          </tbody>
          <tfoot
            class="mat-mdc-table-sticky"
            role="rowgroup"
            style="display: none; bottom: 0px; z-index: 10;"
          >
          </tfoot>
        </table>
      </mat-card-content>
    </mat-card>
  </div>
</yttt-time-list>
`;

exports[`TimeListComponent should be rendered with one element 1`] = `
<yttt-time-list
  displayedColumns={[Function Array]}
  timeList={[Function Array]}
>
  <div
    class="time-list"
  >
    <mat-card
      appearance="outlined"
      class="mat-mdc-card mdc-card mat-mdc-card-outlined mdc-card--outlined"
    >
      <mat-card-header
        class="mat-mdc-card-header"
      >
        <div
          class="mat-mdc-card-header-text"
        >
          <mat-card-title
            class="mat-mdc-card-title"
          >
            Track Time
          </mat-card-title>
          <mat-card-subtitle
            class="mat-mdc-card-subtitle"
          >
            New entry
          </mat-card-subtitle>
        </div>
      </mat-card-header>
      <mat-card-content
        class="mat-mdc-card-content"
      >
        <table
          class="mat-mdc-table mdc-data-table__table cdk-table mat-elevation-z8"
          mat-table=""
          role="table"
        >
          <thead
            role="rowgroup"
          >
            <tr
              class="mat-mdc-header-row mdc-data-table__header-row cdk-header-row"
              mat-header-row=""
              role="row"
            >
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-start mat-column-start"
                mat-header-cell=""
                role="columnheader"
              >
                 Start 
              </th>
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-end mat-column-end"
                mat-header-cell=""
                role="columnheader"
              >
                 End 
              </th>
              <th
                class="mat-mdc-header-cell mdc-data-table__header-cell cdk-header-cell cdk-column-ticket mat-column-ticket"
                mat-header-cell=""
                role="columnheader"
              >
                 Ticket 
              </th>
            </tr>
          </thead>
          <tbody
            class="mdc-data-table__content"
            role="rowgroup"
          >
            <tr
              class="mat-mdc-row mdc-data-table__row cdk-row"
              mat-row=""
              role="row"
            >
              <td
                class="mat-mdc-cell mdc-data-table__cell cdk-cell cdk-column-start mat-column-start"
                mat-cell=""
                role="cell"
              >
                 Sun Jan 12 2025 10:00:00 GMT+0000 (Greenwich Mean Time) 
              </td>
              <td
                class="mat-mdc-cell mdc-data-table__cell cdk-cell cdk-column-end mat-column-end"
                mat-cell=""
                role="cell"
              >
              </td>
              <td
                class="mat-mdc-cell mdc-data-table__cell cdk-cell cdk-column-ticket mat-column-ticket"
                mat-cell=""
                role="cell"
              >
                 T1 
              </td>
            </tr>
          </tbody>
          <tfoot
            class="mat-mdc-table-sticky"
            role="rowgroup"
            style="display: none; bottom: 0px; z-index: 10;"
          >
          </tfoot>
        </table>
      </mat-card-content>
    </mat-card>
  </div>
</yttt-time-list>
`;
